# cli-pomodoro

./: pyproject.toml
cli_pomodoro/: main.py  nohup.out
cli_pomodoro/audio/: nohup.out
