[tool.poetry]
name = "cli-pomodoro"
version = "0.1.0"
description = ""
authors = ["nkatshiba <nkatshiba@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfiglet = "^1.0.2"
simpleaudio = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
